--- a/AnsiEscapeTools/AnsiEscapeTools.fsproj
+++ b/AnsiEscapeTools/AnsiEscapeTools.fsproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Parser.fs" />
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
