Added påarsing tests for parsing text without escapes

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,5 @@ DebugConstants.cs
 *.userprefs
 src/VsExtension/source.extension.vsixmanifest
 !packages/Microsoft.Web.Xdt.1.0.0-alpha/
+*.ncrunchproject
+*.ncrunchsolution
